force-app/main/default/objects/CSBD_Infobip_Setting__c/CSBD_Infobip_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting para controlar algunos parámetros utilizados en el envío de mensajes a través de Infobip, así como para apagar el envío de mensajes automáticos si se desea.</description>
    <label>CSBD Infobip Setting</label>
</CustomObject>