force-app/main/default/objects/CSBD_Infobip_Setting__c/fields/CSBD_Card_Size__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Card_Size__c</fullName>
    <description>Define el tamaño con el que se va a enviar la imagen contenida en el Card. Los posibles valores son &quot;SHORT&quot; &quot;MEDIUM&quot; &quot;TALL&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Define el tamaño con el que se va a enviar la imagen contenida en el Card. Los posibles valores son &quot;SHORT&quot; &quot;MEDIUM&quot; &quot;TALL&quot;.</inlineHelpText>
    <label>Tamaño del Card</label>
    <length>150</length>
    <type>Text</type>
</CustomField>