force-app/main/default/objects/CSBD_Infobip_Setting__c/fields/CSBD_Envio_Automatico_Activo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Envio_Automatico_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determina si se va a enviar un RCS message automaticamente cuando se crea una oportunidad de Préstamo.</description>
    <inlineHelpText>Determina si se va a enviar un RCS message automaticamente cuando se crea una oportunidad de Préstamo.</inlineHelpText>
    <label>Envio Automatico Activo</label>
    <type>Checkbox</type>
</CustomField>