force-app/main/default/objects/CSBD_Infobip_Setting__c/fields/CSBD_Tiempo_Espera__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Tiempo_Espera__c</fullName>
    <description>Tiempo en MINUTOS que se esperará antes de enviar el mensaje de SMS Failover. Después de este tiempo, si el RCS no ha sido enviado por algún motivo, se considera ¨Expired¨. Valor máximo 48h</description>
    <inlineHelpText>Tiempo en MINUTOS que se esperará antes de enviar el mensaje de SMS Failover. Después de este tiempo, si el RCS no ha sido enviado por algún motivo, se considera ¨Expired¨. Valor máximo 48h</inlineHelpText>
    <label>Tiempo de Espera</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>