force-app/main/default/objects/CSBD_Infobip_Setting__c/fields/CSBD_Tipo_Tarea__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Tipo_Tarea__c</fullName>
    <description>Valor a utilizar para guardar en el campo Type de Task.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Valor a utilizar para guardar en el campo Type de Task.</inlineHelpText>
    <label>Tipo Tarea</label>
    <length>150</length>
    <type>Text</type>
</CustomField>