force-app/main/default/objects/CSBD_Infobip_Setting__c/fields/CSBD_URL_Imagen__c.field-meta.xml
<CustomField>
    <fullName>CSBD_URL_Imagen__c</fullName>
    <description>Url de la Imagen utilizada en el RCS Card. Debe ser publica y accesible desde fuera de Salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Url de la Imagen utilizada en el RCS Card. Debe ser publica y accesible desde fuera de Salesforce</inlineHelpText>
    <label>URL Imagen</label>
    <type>Url</type>
</CustomField>